--- a/home.html
+++ b/home.html
@@ -159,7 +159,7 @@ a:active {
 		<div class="header">
 			<div class="rightTopHeader">
             <div class="logo-container-top">
-			<a href="explorer.html"><img src="assets/img/logo/explore.PNG" alt="Explore"></a>
+			<a href="explorer.html">Explore</a>
 		</div>
      <a href="explorer.html" class="open-menu">
 					<!-- Buttons Bars -->
